# dichotomia

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE-3RD-PARTY  README.md  conanfile.py  pyproject.toml  vcpkg.json
.github/workflows/: ci.yml  docs.yml
benchmarks/: CMakeLists.txt  bench_math.cpp
bindings/python/: CMakeLists.txt  bind_matrices.cpp  bind_quaternions.cpp  bind_vectors.cpp  module.cpp
bindings/python/benchmarks/: test_benchmark.py
bindings/python/tests/: test_matrices.py  test_numpy_integration.py  test_quaternions.py  test_vectors.py
cmake/: dichotomiaConfig.cmake.in
docs/: Doxyfile.in
include/: angle.hpp  dich_assert.h  dich_concepts.h  dichotomia.hpp  macros.h  mat4.hpp  math_assert.h  math_concepts.h  quat.hpp  vec2.hpp  vec3.hpp  vec4.hpp  zem_math.hpp
tests/: CMakeLists.txt  test.cpp  test_angle.cpp  test_mat4.cpp  test_python_bindings.py  test_quat.cpp  test_vec2.cpp  test_vec3.cpp  test_vec4.cpp
