[build-system]
requires = ["scikit-build-core>=0.3.3", "nanobind>=2.4.0"]
build-backend = "scikit_build_core.build"

[project]
name = "dichotomia"
version = "1.0.0"
description = "A minimalistic, modern C++23 math library"
readme = "README.md"
requires-python = ">=3.8"
authors = [
  { name="Waldemarsch" },
]

[tool.scikit-build]
cmake.args = ["-DDICHOTOMIA_BUILD_PYTHON_BINDINGS=ON"]
cmake.build-type = "Release"
